--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,12 @@
         "vlucas/phpdotenv": "^5.3"
      },
     "require-dev": {
-        "symfony/var-dumper": "^5.3"
+        "symfony/var-dumper": "^5.3",
+        "phpstan/phpstan": "^0.12.99",
+        "phpstan/phpstan-deprecation-rules": "^0.12.6",
+        "squizlabs/php_codesniffer": "^3.6",
+        "phpcompatibility/php-compatibility": "^9.3",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1"
     },
     "autoload": {
         "classmap": [
