--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+    "name": "pila/sms-sender",
+    "description": "Tool, which can monitor site status, or update stuff.",
+    "license": "GPL-3.0",
     "require": {
         "guzzlehttp/guzzle": "^7.0",
         "phpmailer/phpmailer": "^6.5",
