--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,13 @@
     "license": "GPL-3.0-or-later",
     "require": {
         "guzzlehttp/guzzle": "^7.0",
-        "phpmailer/phpmailer": "^6.5",
+        "phpmailer/phpmailer": "^6.6",
         "vlucas/phpdotenv": "^5.3"
      },
     "require-dev": {
-        "symfony/var-dumper": "^5.3",
-        "phpstan/phpstan": "^0.12.99",
-        "phpstan/phpstan-deprecation-rules": "^0.12.6",
+        "symfony/var-dumper": "^6.0",
+        "phpstan/phpstan": "^1.4",
+        "phpstan/phpstan-deprecation-rules": "^1",
         "squizlabs/php_codesniffer": "^3.6",
         "phpcompatibility/php-compatibility": "^9.3",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1"
@@ -19,5 +19,10 @@
         "classmap": [
             "inc/"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
