--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,6 @@
 includes:
 	- vendor/phpstan/phpstan-deprecation-rules/rules.neon
-	#- vendor/phpstan/phpstan/conf/bleedingEdge.neon
+	- vendor/phpstan/phpstan/conf/bleedingEdge.neon
 
 parameters:
 	paths:
